Index test page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hey !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dark Warm Little Room</title>
+</head>
+<body>
+    <h1>HEY ! Welcome to the Dark Warm Little Room</h1>
+</body>
+</html>
